Fixing flexbox layout bug

--- a/css/qlock5.css
+++ b/css/qlock5.css
@@ -12,35 +12,40 @@
 }
 
 html, body {
+	width: 100%;
 	height: 100%;
 	min-height: 18em;
-	width: 100%;
+	-webkit-text-size-adjust: none;
 }
 
 body {
 	margin: 0;
 	background: #fff;
 	font-family: 'NotCourierSansRegular';
-	
+
 	display: -webkit-box;   /* OLD: Safari,  iOS, Android browser, older WebKit browsers.  */
-	display: -moz-box;      /* OLD: Firefox (buggy) */ 
-	display: -ms-flexbox;   /* MID: IE 10 */
-	display: -webkit-flex;  /* NEW, Chrome 21+ */
-	display: flex;          /* NEW: Opera 12.1, Firefox 22+ */
+ 	display: -moz-box;      /* OLD: Firefox (buggy) */ 
+ 	display: -ms-flexbox;   /* MID: IE 10 */
+  	display: -webkit-flex;  /* NEW, Chrome 21+ */
+ 	display: flex;          /* NEW: Opera 12.1, Firefox 22+ */
 
-	-webkit-box-align: center; -moz-box-align: center; /* OLD… */
-	-ms-flex-align: center; /* You know the drill now… */
-	-webkit-align-items: center;
-	align-items: center;
+	-webkit-box-align: center; 
+	-moz-box-align: center; /* OLD… */
+ 	-ms-flex-align: center; /* You know the drill now… */
+ 	-webkit-align-items: center;
+ 	align-items: center;
 
-	-webkit-box-pack: center; -moz-box-pack: center; 
-	-ms-flex-pack: center; 
-	-webkit-justify-content: center;
-	justify-content: center;
+ 	-webkit-box-pack: center; 
+ 	-moz-box-pack: center; 
+ 	-ms-flex-pack: center; 
+ 	-webkit-justify-content: center;
+ 	justify-content: center;
+
 }
 
 footer {
 	display: block;
+	margin-bottom: 1em;
 	color: #999;
 	font-size: 14px;
 	text-align: center;
